@@ -4,13 +4,13 @@
 pkgname=spheresim-git
 _gitname=spheresim
 pkgver=latest
-pkgrel=1
+pkgrel=2
 pkgdesc="Physical simulation of particle movements (server and clients)."
 arch=('i686' 'x86_64' 'armv7h')
 url="http://sourceforge.net/projects/spheresim/"
 license=('BSD 3-clause')
 depends=('qt5-base' 'mesa')
-makedepends=('git' 'cmake' 'eigen3')
+makedepends=('git' 'cmake' 'eigen')
 options=()
 conflicts=('spheresim')
 provides=('spheresim')
