@@ -4,13 +4,13 @@
 pkgname=mingw-w64-spheresim-git
 _gitname=spheresim
 pkgver=latest
-pkgrel=1
+pkgrel=2
 pkgdesc="Physical simulation of particle movements (server and clients). (mingw-w64)"
 arch=('any')
 url="http://sourceforge.net/projects/spheresim/"
 license=('BSD 3-clause')
 depends=('mingw-w64-crt' 'mingw-w64-qt5-base')
-makedepends=('git' 'mingw-w64-gcc' 'mingw-w64-cmake' 'mingw-w64-eigen3')
+makedepends=('git' 'mingw-w64-gcc' 'mingw-w64-cmake' 'mingw-w64-eigen')
 options=('!strip' '!buildflags' 'staticlibs')
 conflicts=('mingw-w64-spheresim')
 provides=('mingw-w64-spheresim')
