@@ -1,4 +1,5 @@
 * Fixed Viewer linking.
+* Fixed Eigen package name in PKGBUILDs.
 
 SphereSim 3.0.1:
 * Corrected version number.
